--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
     <strong>Science Translational Medicine (STM)<strong>
   </p>
     <p>
-    <strong>Details of work<strong>: 
+    Details of work: 
       My recent post-doc research uncovers a previously unknown immune mechanism driving endocrine therapy resistance in estrogen receptor–positive (ER⁺) luminal breast cancer. In this study, we identified a distinct subset of tumor-associated macrophages (TAMs) expressing PD-L1 that accumulate in endocrine-resistant tumors. Using patient-derived samples, transcriptomic profiling, and multiple in vivo models, we discovered that breast cancer cells through the Notch ligand DLL1, actively recruits and programs these PD-L1⁺ macrophages via the CCR3–CCL7 axis.
 Once within the tumor microenvironment, these DLL1-responsive macrophages act as “bodyguards” for cancer cells — suppressing CD8⁺ T-cell activity, sustaining cancer stem cells (CSC), and fostering a microenvironment that shields tumors from the effects of tamoxifen and other endocrine therapies. Importantly, we demonstrated that high DLL1 expression and enrichment of PD-L1⁺ TAMs correlate with poor therapeutic outcomes and reduced patient survival in ER⁺ breast cancer.
 Building on these mechanistic insights, we evaluated a triple-therapy approach combining DLL1 blockade, PD-L1 inhibition, and low-dose tamoxifen. This regimen markedly reduced tumor burden restored immune surveillance, and diminished stem-like cell populations in preclinical models and patient derived explants (PDE) offering a rational strategy to overcome hormone resistance.
@@ -332,6 +332,7 @@ This work establishes a new paradigm linking Notch signaling and immune evasion 
   </div>
 </body>
 </html>
+
 
 
 
