--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
   <div class="tab" id="research">
     <h2>Research Activity</h2>
     <p>
-    <strong>Project 1 (Post-doc work at University of Miami, FL USA)<strong>
+    Project 1 (Post-doc work at University of Miami, FL USA)
   </p>
 
     <h3>Title: DLL1-responsive PD-L1+ tumor-associated macrophages promote endocrine resistance in breast cancer. <a href="https://www.science.org/doi/10.1126/scitranslmed.adr6207" target="_blank">Link</a></h3>
@@ -267,7 +267,7 @@
     Authors: Shailesh Singh, Claudia Weindorfer, Ajeya Nandi, Chermakani Panneer Selvam, Marcelo Mendes Götze, Megha Das, Andres Falaschini, Youley Tjendra, Melinda M. Boone, Helmut Dolznig, Qing Zhang, Robert Clarke, Christoforos Thomas, Rumela Chakrabarti.
   </p>
     <p>
-    <strong>Science Translational Medicine (STM)<strong>
+    Science Translational Medicine (STM)
   </p>
     <p>
     Details of work: 
@@ -332,6 +332,7 @@ This work establishes a new paradigm linking Notch signaling and immune evasion 
   </div>
 </body>
 </html>
+
 
 
 
