--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
     <h2>Research Articles</h2>
     <ul>
       <li>Shailesh Singh, Claudia Weindorfer, Ajeya Nandi, Chermakani Panneer Selvam, Marcelo Mendes Götze, Megha Das, Andres Falaschini, Youley Tjendra, Melinda M. Boone, Helmut Dolznig, Qing Zhang, Robert Clarke, Christoforos Thomas, Rumela Chakrabarti. (2025). DLL1-responsive PD-L1+ tumor-associated macrophages promote endocrine resistance in breast cancer. <i>Science Translational Medicine</i>, 17: 823. <a href="https://www.science.org/doi/10.1126/scitranslmed.adr6207" target="_blank">Link</a></li>
+      <li>Shailesh Singh, Saurabh Rai, Audditiya Bandopadhyay, Megha Das. (2025). From detection to drug delivery: innovations in cancer biosensors from concept to clinical impact. <i>Biotechnology for Sustainable Materials (BMC)</i>, 2: 17. <a href="https://doi.org/10.1186/s44316-025-00040-3" target="_blank">Link</a></li>
       <li>Shailesh Singh, Megha Das, Rumela Chakrabarti. (2024). Abstract 777: Notch signaling dependent chemoresistance in racial disparity in ER+ breast cancer. <i>Cancer Research</i> 15 March 2024; 84: 777. <a href="https://doi.org/10.1158/1538-7445.AM2024-777" target="_blank">Link</a></li>
       <li>Megha Das, Samantha Henry, Shailesh Singh, Camila Dos Santos, Rumela Chakrabarti. (2024). Abstract 179: Identification of a novel crosstalk between MDSC and NKregs in immunotherapy resistant triple negative breast cancer. <i>Cancer Research</i> 15 March 2024; 84: 179. <a href="https://doi.org/10.1158/1538-7445.AM2024-179" target="_blank">Link</a></li>
       <li>Shailesh Singh, Anjali, Arvind Kumar Singh. (2022). Impact of environmental stress on biochemical profile and fitness traits in Drosophila malerkotliana. <i>Journal of Scientific Research</i>, 66: 68-76.</li>
@@ -241,7 +242,7 @@
       <li>Shailes Singh, Naveen Yadav, Arvind Kumar Singh. (2019). Sexually dimorphic morphological traits in Bactrocera cucurbitae. <i>Current Life Sciences</i>, 05: 1-6. <a href="https://doi.org/10.5281/zenodo.2553615" target="_blank">DOI</a></li>
       <li>Shailesh Singh, Arvind Kumar Singh. (2018). Skewed distribution of melon fruit flies owing to colour preference. <i>Indian Journal of Scientific Research</i>, 08: 1-4.</li>
       <li>Priya Patel, Shailesh Singh, Arvind Kumar Patel, Bhupendra Kumar, Arvind Kumar Singh, Dinesh Kumar. (2020). Feeding attributes in Mexican beetle. <i>Journal of Asia-Pacific Entomology</i>, 23: 310-314. <a href="https://doi.org/10.1016/j.aspen.2020.02.004" target="_blank">Link</a></li>
-      <li>Sanjay Kumar, Arvind Kumar Singh, Shailesh Singh. (2018). Random association in Drosophila ananassae. <i>J. Mol. Cell. Biochem.</i>, 02: 1-6.</li>
+      <li>Sanjay Kumar, Arvind Kumar Singh, Shailesh Singh. (2018). Random association in Drosophila ananassae. <i>Journal of Molecular and Cellular Biochemistry</i>, 02: 1-6.</li>
       <li>Sanjay Kumar, Arvind Kumar Singh, Shailesh Singh. (2019). Persistence of heterozygosity in Drosophila. <i>Genomics and Genetics</i>, 12: 11-18. <a href="https://doi.org/10.14456/gag.2019.2" target="_blank">Link</a></li>
     </ul>
 
@@ -264,7 +265,7 @@
 
     <h3>Title: DLL1-responsive PD-L1+ tumor-associated macrophages promote endocrine resistance in breast cancer. <a href="https://www.science.org/doi/10.1126/scitranslmed.adr6207" target="_blank">Link</a></h3>
     <p>
-    Authors: Shailesh Singh, Claudia Weindorfer, Ajeya Nandi, Chermakani Panneer Selvam, Marcelo Mendes Götze, Megha Das, Andres Falaschini, Youley Tjendra, Melinda M. Boone, Helmut Dolznig, Qing Zhang, Robert Clarke, Christoforos Thomas, Rumela Chakrabarti.
+    Authors: Shailesh Singhaschini, Youley Tjendra, Melinda M. Boone, Helmut Dolznig, Qing Zhang, Robert Clarke, Christoforos Thomas, Rumela Chakrabarti.
   </p>
     <p>
     Science Translational Medicine (STM)
@@ -275,6 +276,22 @@
 Once within the tumor microenvironment, these DLL1-responsive macrophages act as “bodyguards” for cancer cells — suppressing CD8⁺ T-cell activity, sustaining cancer stem cells (CSC), and fostering a microenvironment that shields tumors from the effects of tamoxifen and other endocrine therapies. Importantly, we demonstrated that high DLL1 expression and enrichment of PD-L1⁺ TAMs correlate with poor therapeutic outcomes and reduced patient survival in ER⁺ breast cancer.
 Building on these mechanistic insights, we evaluated a triple-therapy approach combining DLL1 blockade, PD-L1 inhibition, and low-dose tamoxifen. This regimen markedly reduced tumor burden restored immune surveillance, and diminished stem-like cell populations in preclinical models and patient derived explants (PDE) offering a rational strategy to overcome hormone resistance.
 This work establishes a new paradigm linking Notch signaling and immune evasion in endocrine-resistant breast cancer and provides a translational framework for targeting DLL1 and PD-L1 together to enhance endocrine therapy efficacy.
+  </p>
+
+    <p>
+    Project 2 (Ph.D. work at Banaras Hindu University, VNS India)
+  </p>
+
+    <h3>Title: Study on life history traits of a melon fly (Z. cucurbitae) and establishing its genomic and proteomic resources.</h3>
+    <p>
+    Authors: Shailesh Singh
+  </p>
+    <p>
+    Details of work: 
+      Insects form the largest and most diverse group of animals, thriving across all ecosystems due to their high adaptability, reproductive potential, and rapid evolutionary responses. Among them, Zeugodacus cucurbitae (melon fruit fly) is a major pest of cucurbit crops, causing 30–100% yield loss and significant trade restrictions. This dissertation focuses on the comparative analysis of wild-type and golden brown (gb) eyed mutant Z. cucurbitae to understand variations in life-history traits, stress physiology, and genetic regulation influencing their adaptability.
+The study was divided into four themes. In Chapter 1, life-history analysis revealed that the gb eyed mutation is autosomal recessive. Mutant flies exhibited higher body weight but shorter lifespan and lower fecundity, along with altered energy metabolite levels, indicating metabolic adaptation to stress. Chapter 2 demonstrated that pupation and adult diet significantly influence survival, fecundity, and biochemical composition. Protein-rich diets reduced longevity, while sucrose-rich diets enhanced mutant female lifespan, showing diet-strain interactions.
+In Chapter 3, morphological and molecular divergence in eye structure revealed distorted ommatidia, reduced PKC, PLC, and β-tubulin expression, and altered phototactic behavior in mutants. Proteomic profiling identified 124 and 100 proteins in wild and mutant flies, respectively. Chapter 4 presented de-novo whole genome sequencing of both strains, revealing genome sizes of 420.9 Mb (wild) and 416.8 Mb (mutant), with 6.36% variation including ~4 lakh SNPs and extensive intergenic mutations.
+Overall, the study provides the first report of a mutant Z. cucurbitae from India, linking morphological, physiological, and genomic variations to adaptive evolution and potential resistance mechanisms. The genomic data (BioProject ID: PRJNA835451) establish a foundation for future molecular and pest management research.
   </p>
   </div>
 
@@ -332,6 +349,7 @@ This work establishes a new paradigm linking Notch signaling and immune evasion 
   </div>
 </body>
 </html>
+
 
 
 
