--- a/index.html
+++ b/index.html
@@ -260,12 +260,12 @@
   <div class="tab" id="research">
     <h2>Research Activity</h2>
     <p>
-    Project 1 (Post-doc work at University of Miami, FL USA)
+    <h3>Project 1 (Post-doc work at University of Miami, FL USA)<h3>
   </p>
 
     <h3>Title: DLL1-responsive PD-L1+ tumor-associated macrophages promote endocrine resistance in breast cancer. <a href="https://www.science.org/doi/10.1126/scitranslmed.adr6207" target="_blank">Link</a></h3>
     <p>
-    Authors: Shailesh Singhaschini, Youley Tjendra, Melinda M. Boone, Helmut Dolznig, Qing Zhang, Robert Clarke, Christoforos Thomas, Rumela Chakrabarti.
+    Authors: Shailesh Singh, Claudia Weindorfer, Ajeya Nandi, Chermakani Panneer Selvam, Marcelo Mendes Götze, Megha Das, Andres Falaschini, Youley Tjendra, Melinda M. Boone, Helmut Dolznig, Qing Zhang, Robert Clarke, Christoforos Thomas, Rumela Chakrabarti
   </p>
     <p>
     Science Translational Medicine (STM)
@@ -279,7 +279,7 @@ This work establishes a new paradigm linking Notch signaling and immune evasion 
   </p>
 
     <p>
-    Project 2 (Ph.D. work at Banaras Hindu University, VNS India)
+    <h3>Project 2 (Ph.D. work at Banaras Hindu University, VNS India)<h3>
   </p>
 
     <h3>Title: Study on life history traits of a melon fly (Z. cucurbitae) and establishing its genomic and proteomic resources.</h3>
@@ -349,6 +349,7 @@ Overall, the study provides the first report of a mutant Z. cucurbitae from Indi
   </div>
 </body>
 </html>
+
 
 
 
