--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ This work establishes a new paradigm linking Notch signaling and immune evasion 
 
     <h3>Title: Study on life history traits of a melon fly (Z. cucurbitae) and establishing its genomic and proteomic resources.</h3>
     <p>
-    Authors: Shailesh Singh
+    Author: Shailesh Singh
   </p>
     <p>
     Details of work: 
@@ -349,6 +349,7 @@ Overall, the study provides the first report of a mutant Z. cucurbitae from Indi
   </div>
 </body>
 </html>
+
 
 
 
