--- a/index.html
+++ b/index.html
@@ -344,11 +344,14 @@ Overall, the study provides the first report of a mutant Z. cucurbitae from Indi
 
   <div class="tab" id="contact">
     <h2>Contact Me</h2>
+    <p>Linkdin: <a href="https://www.linkedin.com/in/dr-shailesh-singh-05a792141/</a></p>
+    <p>ResearchGate: <a href="https://www.researchgate.net/profile/Shailesh-Singh-17?ev=hdr_xprf</a></p>
     <p>Email: <a href="mailto:sshailesh165@gmail.com">sshailesh165@gmail.com</a></p>
     <p>Email: <a href="mailto:shailesh.singh1@bhu.ac.in">shailesh.singh1@bhu.ac.in</a></p>
   </div>
 </body>
 </html>
+
 
 
 
