--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
     Authors: Shailesh Singh, Claudia Weindorfer, Ajeya Nandi, Chermakani Panneer Selvam, Marcelo Mendes Götze, Megha Das, Andres Falaschini, Youley Tjendra, Melinda M. Boone, Helmut Dolznig, Qing Zhang, Robert Clarke, Christoforos Thomas, Rumela Chakrabarti
   </p>
     <p>
-    Science Translational Medicine (STM)
+    <h3>Science Translational Medicine (STM)<h3>
   </p>
     <p>
     Details of work: 
@@ -284,7 +284,7 @@ This work establishes a new paradigm linking Notch signaling and immune evasion 
 
     <h3>Title: Study on life history traits of a melon fly (Z. cucurbitae) and establishing its genomic and proteomic resources.</h3>
     <p>
-    Author: Shailesh Singh
+    <h3>Author: Shailesh Singh<h3>
   </p>
     <p>
     Details of work: 
@@ -349,6 +349,7 @@ Overall, the study provides the first report of a mutant Z. cucurbitae from Indi
   </div>
 </body>
 </html>
+
 
 
 
