--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ This work establishes a new paradigm linking Notch signaling and immune evasion 
   </p>
 
     <p>
-    Project 2 (Ph.D. work at Banaras Hindu University, VNS India)
+    <h3>Project 2 (Ph.D. work at Banaras Hindu University, VNS India)<h3>
   </p>
     <h3>Title: Study on life history traits of a melon fly (Z. cucurbitae) and establishing its genomic and proteomic resources.</h3>
     <p>
@@ -349,6 +349,7 @@ Overall, the study provides the first report of a mutant Z. cucurbitae from Indi
   </div>
 </body>
 </html>
+
 
 
 
